--- a/src/partials/section--get-started.hbs
+++ b/src/partials/section--get-started.hbs
@@ -26,10 +26,10 @@
 
                 </div>
 
-                <h3>What is Magnolia SaaS</h3>
+                <h3>Magnolia SaaS</h3>
 
                 <p class="splash">
-                  Magnolia SaaS is a Git-centric, cloud-based platform that brings hyper speed and agility for your development and production lifecycle.
+                  Magnolia SaaS is a Git-centric, cloud-based platform that brings speed and agility for your development and production lifecycle.
                 </p>
 
                 <a href="#" class="link --yellow">
@@ -64,10 +64,10 @@
 
                 </div>
 
-                <h3>Getting Started tutorial</h3>
+                <h3>Get Started</h3>
 
                 <p class="splash">
-                  Start right away with our demo project and step-by-step tutorial.
+                  Jump right in! Get up and running in no time with our starter demo project and step-by-step tutorial.
                 </p>
 
                 <a href="#" class="link --yellow">
@@ -113,7 +113,7 @@
 
                 </div>
 
-                <h3>Concepts and fundamentals</h3>
+                <h3>Concepts</h3>
 
                 <p class="splash">
                   Learn the foundations of developing with Magnolia SaaS and get familiar with our Light Development technology.
