more wording to fit cards better

--- a/src/partials/section--get-started.hbs
+++ b/src/partials/section--get-started.hbs
@@ -90,7 +90,7 @@
                 <h3>APIs</h3>
 
                 <p class="splash">
-                  Get familiar with our APIs for content delivery and templating.
+                  Need to build out with an API? No problem. Get familiar with our APIs including the content delivery and SPA templating API.
                 </p>
 
                 <a href="#" class="link --yellow">
