--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -197,13 +197,15 @@
   <div id="topbar-nav" class="navbar-menu">
     {{> search}}
     <div class="navbar-end">
-      <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i>
- Changelog</a>
-      <div class="navbar-item navbar-item--button">
+      <a href="#saasLandGetStarted" class="navbar-item"> <i class="fa fa-rocket" aria-hidden="true" style="margin-right: 2px;"></i> Get Started</a>
+      <a href="#saasLandTestify" class="navbar-item"> <i class="fa fa-comments-o" aria-hidden="true" style="margin-right: 2px;"></i> Testimonials</a>
+      <a href="#saasLandVideo" class="navbar-item"> <i class="fa fa-laptop" aria-hidden="true" style="margin-right: 2px;"></i> Showcase</a>
+      <a href="#saasLandGuides" class="navbar-item"><i class="fa fa-book" aria-hidden="true" style="margin-right: 2px;"></i> Guides</a>
+      {{!-- <div class="navbar-item navbar-item--button">
         <span class="control">
           <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get SaaS</a>
         </span>
-      </div>
+      </div> --}}
     </div>
   </div>
 </nav>
