--- a/src/partials/section--features.hbs
+++ b/src/partials/section--features.hbs
@@ -112,7 +112,7 @@
       </div>
 
     </div>
-    <div class="link-block --bottom --center">
+    <div class="link-block --bottom --center" style="margin-bottom: 5vh;">
       <a href="#" class="link --black">See all user guides</a>
     </div>
   </div>
