--- a/src/partials/body-home-saas.hbs
+++ b/src/partials/body-home-saas.hbs
@@ -2,12 +2,16 @@
   <main>
     {{> section--hero}}
 
+    <span id="saasLandGetStarted" class="landingSpans"></span>
     {{> section--get-started}}
 
+    <span id="saasLandTestify" class="landingSpans"></span>
     {{> section--yellow}}
 
+    <span id="saasLandVideo" class="landingSpans"></span>
     {{> section--video}}
 
+    <span id="saasLandGuides" class="landingSpans"></span>
     {{> section--features}}
 
     {{!-- {{> section--pre-footer}} --}}
