--- a/src/partials/section--get-started.hbs
+++ b/src/partials/section--get-started.hbs
@@ -32,7 +32,7 @@
                   Magnolia SaaS is a Git-centric, cloud-based platform that brings speed and agility for your development and production lifecycle.
                 </p>
 
-                <a href="#" class="link --yellow">
+                <a href="{{{siteRootPath}}}/saas/index.html" class="link --yellow">
                   <span>Learn more</span>
 
                 </a>
@@ -70,7 +70,7 @@
                   Jump right in! Get up and running in no time with our starter demo project and step-by-step tutorial.
                 </p>
 
-                <a href="#" class="link --yellow">
+                <a href="{{{siteRootPath}}}/saas/hello-saas.html" class="link --yellow">
                   <span>Learn more</span>
 
                 </a>
