--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -35,6 +35,7 @@
 <div class="footer-terms">
   <span>{{{year}}} Magnolia International Ltd. Some rights reserved.</span>
   <a href="https://www.magnolia-cms.com/legal/privacy.html" target="_blank">Privacy policy</a>
+  <a href="#top" title="Scroll to top"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i></a>
 </div>
 {{else}}
 <div class="footer-terms">
