--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -198,14 +198,13 @@
     {{> search}}
     <div class="navbar-end">
       <a href="#saasLandGetStarted" class="navbar-item"> <i class="fa fa-rocket" aria-hidden="true" style="margin-right: 2px;"></i> Get Started</a>
-      <a href="#saasLandTestify" class="navbar-item"> <i class="fa fa-comments-o" aria-hidden="true" style="margin-right: 2px;"></i> Testimonials</a>
       <a href="#saasLandVideo" class="navbar-item"> <i class="fa fa-laptop" aria-hidden="true" style="margin-right: 2px;"></i> Showcase</a>
       <a href="#saasLandGuides" class="navbar-item"><i class="fa fa-book" aria-hidden="true" style="margin-right: 2px;"></i> Guides</a>
-      {{!-- <div class="navbar-item navbar-item--button">
+      <div class="navbar-item navbar-item--button">
         <span class="control">
-          <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get SaaS</a>
+          <a class="button is-primary" href="https://author.prod.corp-webpre.magnolia-platform.com/partner-portal/collaborate/magnolia-saas.html" target="_blank">Get SaaS</a>
         </span>
-      </div> --}}
+      </div>
     </div>
   </div>
 </nav>
