--- a/src/partials/section--get-started.hbs
+++ b/src/partials/section--get-started.hbs
@@ -93,7 +93,7 @@
                   Need to build out with an API? No problem. Get familiar with our APIs including the content delivery and SPA templating API.
                 </p>
 
-                <a href="#" class="link --yellow">
+                <a href="{{{siteRootPath}}}/saas/api.html" class="link --yellow">
                   <span>Learn more</span>
 
                 </a>
@@ -119,7 +119,7 @@
                   Learn the foundations of developing with Magnolia SaaS and get familiar with our Light Development technology.
                 </p>
 
-                <a href="#" class="link --yellow">
+                <a href="{{{siteRootPath}}}/saas/concepts.html" class="link --yellow">
                   <span>Learn more</span>
                   <span class="link-svg"></span>
                 </a>
