changelog links and scrollToTop

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -154,7 +154,7 @@
   <div id="topbar-nav" class="navbar-menu">
     {{> search}}
     <div class="navbar-end">
-      <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i>
+      <a href="{{{siteRootPath}}}/saas/changelog.html" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i>
  Changelog</a>
       <div class="navbar-item navbar-item--button">
         <span class="control">
