--- a/src/partials/section--features.hbs
+++ b/src/partials/section--features.hbs
@@ -113,7 +113,7 @@
 
     </div>
     <div class="link-block --bottom --center" style="margin-bottom: 5vh;">
-      <a href="{{{siteRootPath}}}/saas/index.html" class="link --black">Changelog</a>
+      <a href="{{{siteRootPath}}}/saas/changelog.html" class="link --black">Changelog <i class="fa fa-list-alt" aria-hidden="true" style="color: white;"></i></a>
     </div>
   </div>
 </section>
