--- a/src/css/scroll-to-top.css
+++ b/src/css/scroll-to-top.css
@@ -14,6 +14,10 @@
   transition: 0.5s ease;
 }
 
+#scrollTopBtn i {
+  color: white !important;
+}
+
 #scrollTopBtn:hover {
   background-color: var(--color-green-reflex);
 }
