iframe for now video not functioning properly; placeholder

--- a/src/partials/section--video.hbs
+++ b/src/partials/section--video.hbs
@@ -6,24 +6,25 @@
     <div class="row no-margin d-flex align-center">
       <div class="column c-50 no-padding">
         <div class="section--video__card-content">
-          <h3>See a fleshed out demonstration of how SaaS powers corporate websites, product showcasing, and multi-brand use cases.</h3>
-          <a href="#" class="link --black">See the website</a>
+          <h3>Discover the new development features of Magnolia SaaS and how they’ll help you work faster and better.</h3>
+          <a href="https://author.prod.corp-webpre.magnolia-platform.com/partner-portal/collaborate/magnolia-saas.html" class="link --black" target="_blank">Meet Magnolia SaaS</a>
         </div>
       </div>
       <div class="column c-50 no-padding">
         <div class="section--video__video">
-          <div class="video--overlay">
+          {{!-- <div class="video--overlay">
             <button class="play-video">
               <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M24 48C37.2548 48 48 37.2548 48 24C48 10.7452 37.2548 0 24 0C10.7452 0 0 10.7452 0 24C0 37.2548 10.7452 48 24 48ZM17.2174 35.7478L37.5652 24L17.2174 12.2522L17.2174 35.7478Z" fill="#FFC226"/>
               </svg>
             </button>
-          </div>
-          <video controls>
+          </div> --}}
+          {{!-- <video controls>
             <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
             Your browser does not support the video tag.
-          </video>
+          </video> --}}
+        <iframe title="Magnolia Live Copy" src="https://video.magnolia-cms.com/v.ihtml/player.html?source=embed&photo%5fid=82885250" style="width:100%; height:100%; position: absolute; top: 0; left: 0;" frameborder="0" border="0" scrolling="no" allowfullscreen allow="autoplay; fullscreen"><p>Your web browser does not support iframes, which means that the video Magnolia Live Copy cannot play.</p></iframe>
         </div>
       </div>
     </div>
