--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -11,7 +11,7 @@ body * {
 }
 
 .body :where(h1, h2, h3, blockquote) {
-  font-family: "NationalCompressed", sans-serif;
+  font-family: var(--saas-land-font-family);
 }
 
 .body :where(h1, h2, h3, .splash) {
@@ -69,7 +69,7 @@ h3 {
 }
 
 .splash {
-  font-family: Roboto, sans-serif;
+  font-family: var(--saas-land-font-family);
   font-size: 16px;
   line-height: 1.28;
 }
@@ -142,7 +142,7 @@ h3 {
 }
 
 .section.section--yellow {
-  background-color: var(--s-yellow);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(51,51,51,1) 1%, var(--color-primary-yellow) 26%, var(--color-primary-yellow) 100%);
   margin-bottom: 30px;
 }
 
@@ -354,7 +354,7 @@ h3 {
 }
 
 .floating-block .card-block .title {
-  font-family: "NationalCompressed", sans-serif;
+  font-family: var(--saas-land-font-family);
   font-size: 30px;
 }
 
