--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -142,7 +142,7 @@ h3 {
 }
 
 .section.section--yellow {
-  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(51,51,51,1) 1%, var(--color-primary-yellow) 26%, var(--color-primary-yellow) 100%);
+  background: linear-gradient(0deg, var(--color-black) 0%, var(--color-jet-30) 1%, var(--color-primary-yellow) 26%, var(--color-primary-yellow) 100%);
   margin-bottom: 30px;
 }
 
