--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url(https://www.magnolia-cms.com//.resources/corpweb2021/webresources/fonts/national-2-compressed-web-regular.woff2);
+@import url(https://www.magnolia-cms.com//.resources/corpweb2021/webresources/fonts/national-2-compressed-web-regular-italic.woff2);
+@import url(https://www.magnolia-cms.com//.resources/corpweb2021/webresources/fonts/national-2-compressed-web-bold.woff2);
 @import "typeface-roboto.css";
 @import "typeface-roboto-mono.css";
 @import "typeface-national-compressed.css";
