--- a/src/partials/section--video.hbs
+++ b/src/partials/section--video.hbs
@@ -24,7 +24,7 @@
             <source src="movie.ogg" type="video/ogg">
             Your browser does not support the video tag.
           </video> --}}
-        <iframe title="Magnolia Live Copy" src="https://video.magnolia-cms.com/v.ihtml/player.html?source=embed&photo%5fid=82885250" style="width:100%; height:100%; position: absolute; top: 0; left: 0;" frameborder="0" border="0" scrolling="no" allowfullscreen allow="autoplay; fullscreen"><p>Your web browser does not support iframes, which means that the video Magnolia Live Copy cannot play.</p></iframe>
+          <iframe src="https://video.magnolia-cms.com/v.ihtml/player.html?token=2b616588b087e2ec1c1e89c59a5ff960&source=embed&photo%5fid=86754520&autoPlay=0&endOn=" style="width:100%; height:100%; position: absolute; top: 0; left: 0;" frameborder="0" border="0" scrolling="no" allowfullscreen allow="autoplay; fullscreen"></iframe>
         </div>
       </div>
     </div>
