api developers section link

--- a/src/partials/section--get-started.hbs
+++ b/src/partials/section--get-started.hbs
@@ -32,7 +32,7 @@
                   Magnolia SaaS is a Git-centric, cloud-based platform that brings speed and agility for your development and production lifecycle.
                 </p>
 
-                <a href="{{{siteRootPath}}}/saas/index.html" class="link --yellow">
+                <a href="{{{siteRootPath}}}/saas/intro.html" class="link --yellow">
                   <span>Learn more</span>
 
                 </a>
@@ -93,7 +93,7 @@
                   Need to build out with an API? No problem. Get familiar with our APIs including the content delivery and SPA templating API.
                 </p>
 
-                <a href="{{{siteRootPath}}}/saas/api.html" class="link --yellow">
+                <a href="{{{siteRootPath}}}/saas/developers/api.html" class="link --yellow">
                   <span>Learn more</span>
 
                 </a>
