--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -251,7 +251,7 @@
 
 .doc .admonitionblock code {
   color: var(--color-primary-green);
-}admonition
+}
 
 .doc .admonitionblock p,
 .doc .admonitionblock td.content {
@@ -690,7 +690,7 @@
   overflow-x: auto;
   padding: 0.75rem;
   border-radius: 0.15rem;
-  color: whitesmoke;
+  color: whitesmoke !important;
 }
 
 /* NOTE assume pre.highlight contains code[data-lang] */
