--- a/src/css/highlight.css
+++ b/src/css/highlight.css
@@ -1,14 +1,14 @@
 /*! Adapted from the GitHub style by Vasily Polovnyov <vast@whiteants.net> */
 .hljs-comment,
 .hljs-quote {
-  color: #998;
+  color: #998 !important;
   font-style: italic;
 }
 
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-subst {
-  color: lightgreen;
+  color: lightgreen !important;
   font-weight: var(--monospace-font-weight-bold);
 }
 
@@ -17,18 +17,18 @@
 .hljs-variable,
 .hljs-template-variable,
 .hljs-tag .hljs-attr {
-  color: pink;
+  color: pink !important;
 }
 
 .hljs-string,
 .hljs-doctag {
-  color: lightgreen;
+  color: lightgreen !important;
 }
 
 .hljs-title,
 .hljs-section,
 .hljs-selector-id {
-  color: coral;
+  color: coral !important;
   font-weight: var(--monospace-font-weight-bold);
 }
 
@@ -38,43 +38,43 @@
 
 .hljs-type,
 .hljs-class .hljs-title {
-  color: yellow;
+  color: yellow !important;
   font-weight: var(--monospace-font-weight-bold);
 }
 
 .hljs-tag,
 .hljs-name,
 .hljs-attribute {
-  color: #1cc5d1;
+  color: #1cc5d1 !important;
   font-weight: normal;
 }
 
 .hljs-regexp,
 .hljs-link {
-  color: var(--color-green-reflex);
+  color: var(--color-green-reflex) !important;
 }
 
 .hljs-symbol,
 .hljs-bullet {
-  color: #90ee90;
+  color: #90ee90 !important;
 }
 
 .hljs-built_in,
 .hljs-builtin-name {
-  color: #39fff5;
+  color: #39fff5 !important;
 }
 
 .hljs-meta {
-  color: #999;
+  color: #999 !important;
   font-weight: var(--monospace-font-weight-bold);
 }
 
 .hljs-deletion {
-  background: #fdd;
+  background: #fdd !important;
 }
 
 .hljs-addition {
-  background: #dfd;
+  background: #dfd !important;
 }
 
 .hljs-emphasis {
