links for partner portal saas page

--- a/src/partials/section--video.hbs
+++ b/src/partials/section--video.hbs
@@ -7,7 +7,7 @@
       <div class="column c-50 no-padding">
         <div class="section--video__card-content">
           <h3>Discover the new development features of Magnolia SaaS and how they’ll help you work faster and better.</h3>
-          <a href="https://author.prod.corp-webpre.magnolia-platform.com/partner-portal/collaborate/magnolia-saas.html" class="link --black" target="_blank">Meet Magnolia SaaS</a>
+          <a href="https://www.magnolia-cms.com/partner-portal/collaborate/magnolia-saas.html" class="link --black" target="_blank">Meet Magnolia SaaS</a>
         </div>
       </div>
       <div class="column c-50 no-padding">
