--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -202,7 +202,7 @@
       <a href="#saasLandGuides" class="navbar-item"><i class="fa fa-book" aria-hidden="true" style="margin-right: 2px;"></i> Guides</a>
       <div class="navbar-item navbar-item--button">
         <span class="control">
-          <a class="button is-primary" href="https://author.prod.corp-webpre.magnolia-platform.com/partner-portal/collaborate/magnolia-saas.html" target="_blank">Get SaaS</a>
+          <a class="button is-primary" href="https://www.magnolia-cms.com/partner-portal/collaborate/magnolia-saas.html" target="_blank">Get SaaS</a>
         </span>
       </div>
     </div>
