--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -32,7 +32,7 @@
         <a class="navbar-item" onclick="history.back(-1)" class="link-button link-back-button" style="cursor: pointer;"> Go back</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
-            <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get Magnolia</a>
+            <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
           </span>
         </div>
       </div>
@@ -116,7 +116,7 @@
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item headless">PaaS</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
-            <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get Magnolia</a>
+            <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
           </span>
         </div>
       </div>
@@ -158,7 +158,7 @@
  Changelog</a>
       <div class="navbar-item navbar-item--button">
         <span class="control">
-          <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get SaaS</a>
+          <a class="button is-primary" href="https://www.magnolia-cms.com/partner-portal/collaborate/magnolia-saas.html" target="_blank">Get SaaS</a>
         </span>
       </div>
     </div>
@@ -260,7 +260,7 @@
         {{!-- <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a> --}}
         <div class="navbar-item navbar-item--button">
           <span class="control">
-            <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get Magnolia</a>
+            <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
           </span>
         </div>
       </div>
@@ -318,7 +318,7 @@
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
-            <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get Magnolia</a>
+            <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
           </span>
         </div>
       </div>
@@ -377,7 +377,7 @@
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
         <div class="navbar-item navbar-item--button">
           <span class="control">
-            <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get Magnolia</a>
+            <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
           </span>
         </div>
       </div>
