--- a/src/partials/toolbar.hbs
+++ b/src/partials/toolbar.hbs
@@ -1,3 +1,22 @@
+{{#if (eq page.layout 'saas')}}
+<div class="toolbar" role="navigation">
+{{> nav-toggle}}
+  {{> page-versions}}
+  {{#with site.homeUrl}}
+  <a href="{{{siteRootPath}}}/saas/index.html" class="home-link{{#if @root.page.home}} is-current{{/if}}"></a>
+  {{/with}}
+
+{{> breadcrumbs}}
+
+  {{#if (and page.fileUri (not env.CI))}}
+  <div class="edit-this-page"><a href="{{page.fileUri}}">Edit this Page</a></div>
+  {{else if (and page.editUrl (or env.FORCE_SHOW_EDIT_PAGE_LINK (not page.origin.private)))}}
+  <div class="edit-this-page"><a href="{{page.editUrl}}">Edit this Page</a></div>
+  {{/if}}
+</div>
+
+{{else}}
+
 <div class="toolbar" role="navigation">
 {{> nav-toggle}}
   {{> page-versions}}
@@ -13,3 +32,5 @@
   <div class="edit-this-page"><a href="{{page.editUrl}}">Edit this Page</a></div>
   {{/if}}
 </div>
+
+{{/if}}
