--- a/src/layouts/home.hbs
+++ b/src/layouts/home.hbs
@@ -24,12 +24,13 @@
 </div> --}}
 {{> footer}}
 {{> feedback}}
+{{> popup}}
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
-  <div class="modal-content">
+  {{!-- <div class="modal-content">
     <span class="close">&times;</span>
     <h1>Love Magnolia?</h1>
     <h2>Share your experience & get a reward!</h2>
@@ -40,7 +41,7 @@
       <a class="review-button-partner" href="https://mgnl.io/magnolia-partner-reviews" target="_blank"><button>Partner reviews <i class="fa fa-star" aria-hidden="true"></i></button></a> 
     </div>
   </div>
-</div>
+</div> --}}
 
 <script>
 document.addEventListener('DOMContentLoaded', function () {
