--- a/src/layouts/home-saas.hbs
+++ b/src/layouts/home-saas.hbs
@@ -7,6 +7,7 @@
 {{> header}}
 {{> body-home-saas}}
 {{> footer}}
+{{> popup}}
 
 <script>
 document.addEventListener('DOMContentLoaded', function () {
