--- a/src/layouts/splash-saas.hbs
+++ b/src/layouts/splash-saas.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {{> head defaultPageTitle='Untitled'}}
+  {{> head defaultPageTitle='Welcome to Magnolia SaaS'}}
 </head>
 <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}}">
 {{> header}}
