--- a/src/partials/section--splash.hbs
+++ b/src/partials/section--splash.hbs
@@ -1,26 +1,15 @@
-<section class="section section--wide section--video">
+<section class="section section--wide section--video" style="padding-right: 5vw !important; padding-left: 5vw !important">
   <div class="container">
     <div class="row no-margin d-flex align-center">
       <div class="column c-50 no-padding">
         <div class="section--video__card-content">
           <h3>Welcome to Magnolia SaaS! We couldn't be happier you're here.</h3>
-          <a href="https://id.saas.magnolia-cloud.com/" class="link --black" id="celebrateButton" target="_blank">Log in to SaaS</a>
+          <a href="https://id.saas.magnolia-cloud.com/" class="link --black" id="celebrateButton" target="_blank">Log in</a>
+          <a href="{{{siteRootPath}}}/saas/intro.html" class="link --black" id="celebrateButton">Docs</a>
         </div>
       </div>
       <div class="column c-50 no-padding">
-        <div class="section--video__video" style="margin-left: -5rem !important;">
-          {{!-- <div class="video--overlay">
-            <button class="play-video">
-              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M24 48C37.2548 48 48 37.2548 48 24C48 10.7452 37.2548 0 24 0C10.7452 0 0 10.7452 0 24C0 37.2548 10.7452 48 24 48ZM17.2174 35.7478L37.5652 24L17.2174 12.2522L17.2174 35.7478Z" fill="#FFC226"/>
-              </svg>
-            </button>
-          </div> --}}
-          {{!-- <video controls>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
-            Your browser does not support the video tag.
-          </video> --}}
+        <div class="section--video__video" style="margin-left: -3rem !important;">
           <iframe id="videoFrame" src="https://video.magnolia-cms.com/v.ihtml/player.html?token=2b616588b087e2ec1c1e89c59a5ff960&source=embed&photo%5fid=86754520&autoPlay=1&endOn=" style="width:100%; height:100%; position: absolute; top: 0; left: 0;" frameborder="0" border="0" scrolling="no" allowfullscreen autoplay></iframe>
         </div>
       </div>
