--- a/src/partials/feedback.hbs
+++ b/src/partials/feedback.hbs
@@ -8,7 +8,7 @@
  
 {{#if (eq page.layout 'saas')}}
     <div id="feedback-saas">
-        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        <a href="https://magnolia-cms.atlassian.net/secure/CreateIssue.jspa?pid=10024&issuetype=10006" target="_blank" rel="noopener">
         Feedback
         </a>
     </div>
