--- a/src/css/location.css
+++ b/src/css/location.css
@@ -311,3 +311,39 @@
   background-size: cover;
   background-attachment: fixed;
 }
+
+.location-modal {
+  display: none; 
+  position: fixed; 
+  z-index: 10; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0, 0, 0); 
+  background-color: rgba(0, 0, 0, 0.4); 
+}
+
+.location-modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.location-modal-close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.location-modal-close:hover,
+.location-modal-close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
