--- a/src/partials/location.hbs
+++ b/src/partials/location.hbs
@@ -1,29 +1,61 @@
 {{#if (eq page.layout 'default')}}
 <div id="location">
-        <p><i class="fa fa-map-marker" aria-hidden="true"></i> DX Core</p>
+        <p title="Location on docs site. Click for more info."><i class="fa fa-map-marker" aria-hidden="true"></i> DX Core</p>
 </div>
 {{/if}}
 
 {{#if (eq page.layout 'headless')}}
 <div id="location-headless">
-        <p><i class="fa fa-map-marker" aria-hidden="true"></i> Headless</p>
+        <p title="Location on docs site. Click for more info."><i class="fa fa-map-marker" aria-hidden="true"></i> Headless</p>
 </div>
 {{/if}}
 
 {{#if (eq page.layout 'trials')}}
 <div id="location-trials">
-        <p>Trials <i class="fa fa-map-marker" aria-hidden="true"></i></p>
+        <p title="Location on docs site. Click for more info."><i class="fa fa-map-marker" aria-hidden="true"></i> Trials</p>
 </div>
 {{/if}}
 
 {{#if (eq page.layout 'saas')}}
 <div id="location-saas">
-        <p><i class="fa fa-map-marker" aria-hidden="true"></i> SaaS</p>
+        <p title="Location on docs site. Click for more info."><i class="fa fa-map-marker" aria-hidden="true"></i> SaaS</p>
 </div>
 {{/if}}
 
 {{#if (eq page.layout 'paas')}}
 <div id="location-paas">
-        <p><i class="fa fa-map-marker" aria-hidden="true"></i> PaaS</p>
+        <p title="Location on docs site. Click for more info."><i class="fa fa-map-marker" aria-hidden="true"></i> PaaS</p>
 </div>
 {{/if}}
+
+<!-- The Modal -->
+<div id="myModal" class="location-modal">
+
+  <!-- Modal content -->
+  <div class="location-modal-content">
+    <span class="location-modal-close">&times;</span>
+    <h2>Modal heading</h2>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
+
+<script>
+const modal = document.getElementById("myModal");
+const btn = document.getElementById("location");
+const span = document.getElementsByClassName("location-modal-close")[0];
+
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
